Fix category name display in templates
The category template was accessing .Name directly but the handler
passed data wrapped in a map with Category, Job, LineItems keys.

- Update category.html to access .Category.Name, .Category.ID, etc.
- Update job.html to pass category data using dict helper
- Add dict template function to renderer

--- a/internal/templates/pages/job.html
+++ b/internal/templates/pages/job.html
@@ -51,8 +51,11 @@
 
                 <!-- Categories List -->
                 <div id="categories-list" class="divide-y divide-slate-100">
+                    {{$job := .Job}}
+                    {{$lineItemsByCategory := .LineItemsByCategory}}
+                    {{$childCategories := .ChildCategories}}
                     {{range .Categories}}
-                        {{template "category" .}}
+                        {{template "category" (dict "Category" . "Job" $job "LineItems" (index $lineItemsByCategory .ID) "ChildCategories" (index $childCategories .ID))}}
                     {{else}}
                         <div id="empty-categories" class="p-8 text-center text-slate-500">
                             <p>No categories yet. Add a category to get started.</p>
