--- a/internal/templates/keyboard/pages/category.html
+++ b/internal/templates/keyboard/pages/category.html
@@ -163,5 +163,5 @@
 <span><kbd class="px-1 bg-slate-100 rounded">l</kbd> labor</span>
 <span><kbd class="px-1 bg-slate-100 rounded">e</kbd> equipment</span>
 <span><kbd class="px-1 bg-slate-100 rounded">d</kbd> delete</span>
-<span><kbd class="px-1 bg-slate-100 rounded">⌫</kbd> back</span>
+<span><kbd class="px-1 bg-slate-100 rounded">esc</kbd> back</span>
 {{end}}
