--- a/internal/templates/keyboard/pages/job.html
+++ b/internal/templates/keyboard/pages/job.html
@@ -103,6 +103,6 @@
 <span><kbd class="px-1 bg-slate-100 rounded">↑↓</kbd> navigate</span>
 <span><kbd class="px-1 bg-slate-100 rounded">⏎</kbd> enter</span>
 <span><kbd class="px-1 bg-slate-100 rounded">c</kbd> new category</span>
-<span><kbd class="px-1 bg-slate-100 rounded">⌫</kbd> back</span>
+<span><kbd class="px-1 bg-slate-100 rounded">esc</kbd> back</span>
 <span><kbd class="px-1 bg-slate-100 rounded">?</kbd> help</span>
 {{end}}
